Project titles align on mobile fixed

--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -45,7 +45,7 @@
     background-color: $secondary-black;
     padding: 1rem;
     display: grid;
-    place-items: center;
+    // place-items: center;
     height: clamp(12rem, 33.5vw + 4.9rem, 18rem);
     width: clamp(10rem, 37.2vw + 2.1rem, 30rem);
     gap: 1rem;
@@ -88,6 +88,7 @@
 
   &__project-header {
     width: 100%;
+    margin-top: 2rem;
   }
 
   &__project-title {
@@ -107,6 +108,7 @@
     text-align: center;
     transition: opacity 300ms ease-in-out;
     opacity: 0;
+    margin-top: 2rem;
   }
 
   &__project-close-btn {
